mule-user-guide/v/3.8/attachment-transformer-reference.adoc
= 附件变压器参考
:keywords: studio, mule message, attachment, transformers, components

使用*attachment transformer*在消息的出站范围上设置，删除或复制附件。要详细了解消息范围，请参阅 link:/mule-user-guide/v/3.8/mule-concepts[骡子概念]。

每个Mule消息由两部分组成。 *header*包含与该消息有关的元数据，例如用于格式化有效负载的*message type*和*encoding*协议。 *payload*保存通常由Mule应用程序流处理的数据，然后分派给一个或多个外部方。此有效负载也可能包含一个包含随消息一起传输的*attachments*（如文本，图像或应用程序）的子部分。

当一个附件被接收到一个流中时，它被认为是一个*inbound property*，并且只要该消息保持在同一个流中，该附件就保持活动状态（即附加到它的父消息）。请注意，附件不会自动成为由出站连接器发送出流的已处理消息的一部分。为了实现这一点，您必须通过将其重新附加到带有*attachment transformer*的消息来明确地将其设置为*outbound property*。或者，您可以指定一个不同的附件以将流程与处理的消息一起离开。

附件变换器可以使用表达式来评估当前消息的内容以及Mule环境的当前状态，以便确定哪些特定附件使用当前消息离开流。例如，附件转换器可以检索与消息有效内容中的某些内容相匹配的照片，并将其附加到消息中。

== 附件和传输

附件变换器在功能上与 link:/mule-user-guide/v/3.8/property-transformer-reference[物业变压器]非常相似。但是，只有以下传输才能支持附件：

* 轴
* 电子邮件
*  HTTP
*  VM

如果使用附件转换器将附件附加到消息上，并且消息通过不支持附件的传输器退出流程，则附件将丢失。

== 配置

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:attachment_transf.png[attachment_transf]

[%header,cols="20a,80a"]
|===
|Field |Description
|*Display Name* |Attachment - Customize to display a unique name for the transformer in your application.

[source]
----
doc:name="Attachment"
----

|*Operation* |Set Attachment - Select to set a new attachment on the outbound scope of your message.

[source,xml]
----
<set-attachment>
----

||Remove Attachment - Select to delete an existing attachment from your message to remove it from the outbound scope.

[source,xml]
----
<remove-attachment> 
----

||Copy Attachments - Select to copy one or more existing attachments from the inbound scope onto the outbound scope of your message.

[source,xml]
----
<copy-attachments> 
----

|*Name* |String or Mule Expression - Specify the name for the attachment that you are creating, or identify the name of the attachment that you are copying or removing. If you are copying or removing attachments, this field accepts a wildcard "*" character.

[source]
----
attachmentName="MyAttachmentName"
----

|*Value* |String or Mule Expression - This field displays only if you are setting a new attachment. Specify the value using either a string or a Mule expression.

[source]
----
value="MyAttachmentValue"
----

|*Content Type* |Select from drop-down list - This field displays only if you are setting a new attachment. Select the content type of the attachment from the drop-down list (shown in screenshot above.)

[source]
----
contentType="text/plain"
----

|===
....
[tab, title="XML Editor or Standalone"]
....

[source,xml, linenums]
----
# Set attachment
<set-attachment attachmentName="IMG_001"  doc:name="Attach Photo" value="IMG_001.jpeg"/>

# Remove attachment
<remove-attachment attachmentName="AttachmentForRemoval" doc:name="Delete Attachment"/>

# Copy attachment
<copy-attachments attachmentName="IMG*" doc:name="Copy All IMG Attachments"/>
----

[%header,cols="30a,70a"]
|===
|Element |Description
|*set-attachment* |Set a new attachment on the outbound scope of your message.
|*remove-attachment* |Delete an existing attachment from your message to remove it from the outbound scope.
|*copy-attachments* |Copy one or more existing attachments from the inbound scope onto the outbound scope of your message.
|===

[%header,cols="30a,70a"]
|===
|Element Attribute |Description
|*doc:name* a|
Customize to display a unique name for the transformer in your application, as shown in the examples above.

Note: Attribute not required in Mule Standalone configuration.

|*attachmentName* a|
The name of the attachment that you are setting, copying, or removing. Can be a string or a Mule expression.

Note: If you are using the remove-attachment or copy-attachments element, you can use a wildcard "*" character. For example, a copy-attachments transformer with an attachment name "IMG*"  copies all attachments whose names begin with "IMG", from the inbound scope to the outbound scope.

|*value* |The value of the attachment that you are setting. This attribute is only relevant for the set-attachment element. Can be a string or a Mule expression.
|*contentType* a|
The link:http://en.wikipedia.org/wiki/MIME[MIME] format for the attachment string.

Supported formats:

* application/json
* application/pdf
* application/x-compressed
* application/zip
* binary/octet-stream
* image/gif
* image/jpeg
* image/png
* multipart/x-zip
* text/css
* text/html
* text/javascript
* text/plain
* text/xml
* text/xhtml


|===
....
------

== 代码示例

以下示例将POST请求发送到++ http：//www.example.com/test++，并带有`ContentType: text/plain`和两个部分：一个名称为key1和content1，另一个名称为key2和content值2。

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd">
 <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration"/>
 <http:request-config name="HTTP_Request_Configuration" host="example.com" port="8082" doc:name="HTTP_Request_Configuration"/>

<flow name="test_flow">
  <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
  <set-attachment attachmentName="key1" value="value1" contentType="text/plain" doc:name="Attachment1"/>
  <set-attachment attachmentName="key2" value="value2" contentType="text/plain" doc:name="Attachment2"/>
  <http:request config-ref="HTTP_Request_Configuration" path="test" method="POST" port="8082"/>
</flow>
</mule>
----

== 另请参阅

* 请参阅 link:/mule-user-guide/v/3.8/mule-concepts[骡子概念]以了解有关消息范围的更多信息。
* 阅读关于相关变换器的 link:/mule-user-guide/v/3.8/property-transformer-reference[物业变压器]， link:/mule-user-guide/v/3.8/variable-transformer-reference[可变变压器]和 link:/mule-user-guide/v/3.8/session-variable-transformer-reference[会话变量变换器]，您可以使用它们为不同范围设置属性和变量。




